--- a/app/views/goodcauses.html
+++ b/app/views/goodcauses.html
@@ -1,20 +1,3 @@
-<div class="col-md-6 rowPadding">
-  <div style="text-align: center;">
-    <a class="lnkGoodCause" href='http://www.didsburygoodneighbours.org.uk/'>
-      <h2>Didsbury Good Neighbours</h2>
-      <img class="goodCauseImg" src="images/dgn.jpg" />
-    </a>
-    <p>The core of our work is befriending isolated older people. We do this by recruiting and training volunteer befrienders;
-      they are then matched with an older person who they visit regularly at home.</p>
-  </div>
-</div>
-<div class="col-md-6 rowPadding">
-  <div style="text-align: center;">
-    <a class="lnkGoodCause" href='http://www.st-catherines-didsbury.co.uk/community-centre.html'>
-      <h2>St Catherines Social Club</h2>
-      <img class="goodCauseImg" src="images/stcaths.jpg" />
-    </a>
-    <p>The parish Social Club was conceived over 40 years ago by the wonderful Fr Jack Fay, then parish priest. He envisaged
-      the format to be run by a Committee to contribute to the spiritual and social development of the community.</p>
-  </div>
+<div class="row marketing col-md-12">
+    <p style="font-style:italic; padding:10px">Coming soon... check back later for updates, or visit us on Twitter or Facebook</p>
 </div>
