--- a/app/views/music.html
+++ b/app/views/music.html
@@ -1,27 +1,3 @@
-<div style="text-align:center;"><h1>Thursday 27th</h1></div>
-<div style="width:80%; margin:auto;">
-    <h3><a href="http://thecraickers.wix.com/thecraickers">The Craickers</a></h3>
-    <p>Raucous Manchester Celtic rock</p>
-    <img width="100%" src="images/craic.jpg">
+<div class="row marketing col-md-12">
+    <p style="font-style:italic; padding:10px">Coming soon... check back later for updates, or visit us on Twitter or Facebook</p>
 </div>
-
-<div style="text-align:center;"><h1>Friday 28th</h1></div>
-<div style="width:80%; margin:auto;">
-    <h3><a href="http://redcarpetcoyote.com/">Red Carpet Coyote</a></h3>
-    <p>High energy blues/rock.</p>
-    <img width="100%" src="images/rcc.jpg">
-</div>
-
-<div style="text-align:center;"><h1>Saturday 29th</h1></div>
-<div style="width:80%; margin:auto;">
-    <h3><a href="https://www.facebook.com/SwinginAffair/">Swingin' Affair</a></h3>
-    <p>Big Band/Easy listening.</p>
-    <img width="100%" src="images/sa.jpg">
-
-    <br><br>
-
-    <h3><a href="https://www.facebook.com/Crafty-Dog-189632137735789/">Crafty Dog</a></h3>
-    <p>Classic rock and pop.</p>
-    <img width="100%" src="images/cd.jpg">
-</div>	
-<br><br>
