--- a/app/views/tickets.html
+++ b/app/views/tickets.html
@@ -1,21 +1,3 @@
-<div class="col-md-6 rowPadding">
-  <div style="text-align: center;">
-    <img id="beerImg" src="images/vipbeer_alt.png" />
-    <h4>Normal Entry - £5</h4>
-  </div>
-  <p>For normal entry into Didsbury Beer Festival, just turn up on the day and pay at the door.</p><br>
-<span>Thursday 27th</span><span class="pull-right">7-11PM</span><br>
-<span>Friday 28th</span><span class="pull-right">6-11PM</span><br>
-<span>Saturday 29th</span><span class="pull-right">12-11PM</span><br><br>
-<p style="font-style:italic;">DBF is a cash only event.<br>A cash point can be found outside <a href="https://www.google.co.uk/maps/place/NatWest/@53.4173229,-2.2312877,15z/data=!4m5!3m4!1s0x0:0xc20131248de437f7!8m2!3d53.4173229!4d-2.2312877">Natwest</a> in Didsbury village.</p>
-</div>
-<div class="col-md-6 rowPadding">
-  <div style="text-align: center;">
-    <img id="ticketImg" src="images/vipticket_alt.png" />
-    <h4>Friends Ticket - £15</h4>
-    <p>On sale now!</p>
-    <p>This ticket covers all three nights, with a glass and guaranteed entry with queue jumping rights!</p>
-    <p>To be purchased in advance - <a title="Or email tessa.connolly@tiscali.co.uk" 	href="mailto:tessa.connolly@tiscali.co.uk?subject=Friends of DBF ticket request">click here</a>
-						Or email tessa.connolly@tiscali.co.uk</p>
-  </div>
+<div class="row marketing col-md-12">
+    <p style="font-style:italic; padding:10px">Coming soon... check back later for updates, or visit us on Twitter or Facebook</p>
 </div>
