--- a/app/styles/_flipclock.scss
+++ b/app/styles/_flipclock.scss
@@ -1,22 +1,22 @@
-#clockdiv{
-	display: inline-block;
-	font-weight: 100;
-	text-align: center;
-	font-size: 18px;
-  width: 100%;
-  color: #fff;
+#clockdiv {
+    display: inline-block;
+    font-weight: 100;
+    text-align: center;
+    font-size: 18px;
+    width: 100%;
+    color: #fff;
 }
 
-#clockdiv > div{
-	padding: 6px;
-	border-radius: 3px;
-	background: #0096c9;
-	display: inline-block;
+#clockdiv>div {
+    padding: 6px;
+    border-radius: 3px;
+    background: #d2232a;
+    display: inline-block;
 }
 
-#clockdiv div > span{
-	padding: 15px;
-	border-radius: 3px;
-	background: rgba(19, 31, 73, 0.56);
-	display: inline-block;
+#clockdiv div>span {
+    padding: 15px;
+    border-radius: 3px;
+    background: rgba(132, 22, 27, 0.4);
+    display: inline-block;
 }
