Remove glass sponsor link

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -24,14 +24,13 @@
                 <div class="smalltext">Seconds</div>
             </div>
         </div>
-        <p style="font-style:italic; text-align:center; font-size:14px;">until Didsbury's Premier Social Event</p>
+        <p style="font-style:italic; text-align:center; font-size:14px;">'til Didsbury's Premier Social Event</p>
         <twitter-widget>
             <a class="twitter-timeline" data-lang="en" data-height="250" data-theme="light" href="https://twitter.com/dbf_beer"></a>
         </twitter-widget>
     </div>
 </div>
 <div class="row marketing col-md-6" style="padding:10px; padding-left:20px; text-align: center;">
-    <p>Would you like to sponsor the glasses this year? <br><a ng-href="pdf/glasssponsors.pdf">Click here</a> for more information</p>
     <div>
         <br>
         <p>
