--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -25,8 +25,7 @@ body {
     color: #5f5c5c;
 }
 
-a,
-h3 {
+a {
     color: #d2232a;
 }
 
@@ -41,6 +40,7 @@ h3 {
 
 .musicHeader {
     margin-bottom: 0;
+    color: #d2232a;
 }
 
 
