add good cause info

--- a/app/views/goodcauses.html
+++ b/app/views/goodcauses.html
@@ -1,3 +1,20 @@
 <div class="row marketing col-md-12">
-    <p style="font-style:italic; padding:10px">Coming soon... check back later for updates, or visit us on Twitter or Facebook</p>
+
+    <div class="col-md-6 rowPadding">
+        <div style="text-align: center;">
+
+            <h2>Didsbury Community Wood</h2>
+            <img class="goodCauseImg" src="images/didscw.jpg" />
+        </div>
+    </div>
+    <div class="col-md-6 rowPadding">
+        <div style="text-align: center;">
+            <a class="lnkGoodCause" href='https://www.gmyn.co.uk/cm/'>
+                <h2>Greater Manchester Youth Network</h2>
+                <img class="goodCauseImg" src="images/gmyn.jpg" />
+            </a>
+            <p>We work to enable young people and organisations to participate, develop and achieve. We aim to do this by offering a variety of activities that will engage and empower young people and by capacity building the organisations that work with
+                them. We work with some of the most disadvantaged young people in the country including those not in education, employment or training, asylum seekers, looked after children and disabled young people.</p>
+        </div>
+    </div>
 </div>
