Add blurb and photo for Tom H. Add times to home page

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -5,7 +5,9 @@
             <br>
             <span style="font-weight:bold;">26th, 27th &amp; 28th October 2017</span>
         </h3>
-        <br>
+        <span>Thursday 26th 7-11PM</span><br>
+        <span>Friday 27th 6-11PM</span><br>
+        <span>Saturday 28th 12-11PM</span><br><br>
         <div id="clockdiv">
             <div>
                 <span class="days"></span>
@@ -54,6 +56,6 @@
         <a href="http://www.flickr.com/photos/65526946@N08/"><i id="jv-flickr" class="jv-flickr"></i></a>
         <a href="http://www.youtube.com/user/Didsburybeerfestival"><i id="jv-youtube" class="jv-youtube"></i></a>
         <a href="http://didsburybeer.blogspot.co.uk/"><i id="jv-blogger" class="jv-blogger"></i></a>
-        <a href="https://plus.google.com/111188242650217473870" rel="publisher"><i id="jv-google" class="jv-google"></i>+</a>
+        <a href="https://plus.google.com/111188242650217473870" rel="publisher"><i id="jv-google" class="jv-google"></i></a>
     </p>
 </div>
