--- a/app/views/music.html
+++ b/app/views/music.html
@@ -1,6 +1,6 @@
 <div class="row marketing col-md-12">
     <div style="text-align:center;">
-        <h1>Thursday 27th</h1>
+        <h1>Thursday</h1>
     </div>
     <div style="width:80%; margin:auto;">
         <h3 class="musicHeader"><a href="https://thefrescofuture.bandcamp.com/">Fresco Future</a></h3>
@@ -11,6 +11,8 @@
     <div style="width:80%; margin:auto;">
         <h3 class="musicHeader">Tom Hingley</h3>
         <span class="smallPrint">21:00 - 22:00</span>
+        <p>Former lead singer of the Inspiral Carpets, Tom plays an eclectic mix of Folk, Soul, Gospel and Blues with plenty of heart, as well as acoustic renditions of Inspiral classics.</p>
+        <img width="100%" src="images/hingley.jpg">
     </div>
     <div style="width:80%; margin:auto;">
         <h3 class="musicHeader"><a href="https://thefrescofuture.bandcamp.com/">Fresco Future</a></h3>
@@ -18,7 +20,7 @@
     </div>
 
     <div style="text-align:center;">
-        <h1>Friday 28th</h1>
+        <h1>Friday</h1>
     </div>
     <div style="width:80%; margin:auto;">
         <h3 class="musicHeader"><a href="https://www.facebook.com/Misfires/">Tokyo Misfires</a></h3>
@@ -36,7 +38,7 @@
     </div>
 
     <div style="text-align:center;">
-        <h1>Saturday 29th</h1>
+        <h1>Saturday</h1>
     </div>
     <div style="width:80%; margin:auto;">
         <h3 class="musicHeader"><a href="https://www.facebook.com/SwinginAffair/">Swingin' Affair</a></h3>
