Add spacing on music page

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -43,6 +43,12 @@ a {
     color: #d2232a;
 }
 
+.bandDiv {
+    width: 80%;
+    margin: auto;
+    padding-bottom: 30px;
+}
+
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
 
