Add beer list and ticket info

--- a/app/views/tickets.html
+++ b/app/views/tickets.html
@@ -1,18 +1,19 @@
 <div class="col-md-6 rowPadding">
-  <div style="text-align: center;">
-    <img id="beerImg" src="images/vipbeer_alt.png" />
-    <h4>Normal Entry - £5</h4>
-  </div>
-  <p>For normal entry into Didsbury Beer Festival, just turn up on the day and pay at the door.</p><br>
-<span>Thursday 26th</span><span class="pull-right">7-11PM</span><br>
-<span>Friday 27th</span><span class="pull-right">6-11PM</span><br>
-<span>Saturday 28th</span><span class="pull-right">12-11PM</span><br><br>
-<p style="font-style:italic;">DBF is a cash only event.<br>A cash point can be found outside <a href="https://www.google.co.uk/maps/place/NatWest/@53.4173229,-2.2312877,15z/data=!4m5!3m4!1s0x0:0xc20131248de437f7!8m2!3d53.4173229!4d-2.2312877">Natwest</a> in Didsbury village.</p>
+    <div style="text-align: center;">
+        <img id="beerImg" src="images/vipbeer_alt.png" />
+        <h4>Normal Entry - £5</h4>
+    </div>
+    <p>For normal entry into Didsbury Beer Festival, just turn up on the day and pay at the door.</p><br>
+    <span>Thursday 26th</span><span class="pull-right">7-11PM</span><br>
+    <span>Friday 27th</span><span class="pull-right">6-11PM</span><br>
+    <span>Saturday 28th</span><span class="pull-right">12-11PM</span><br><br>
+    <p style="font-style:italic;">DBF is a cash only event.<br>A cash point can be found outside <a href="https://www.google.co.uk/maps/place/NatWest/@53.4173229,-2.2312877,15z/data=!4m5!3m4!1s0x0:0xc20131248de437f7!8m2!3d53.4173229!4d-2.2312877">Natwest</a> in Didsbury village.</p>
 </div>
 <div class="col-md-6 rowPadding">
-  <div style="text-align: center;">
-    <img id="ticketImg" src="images/vipticket_alt.png" />
-    <h4>Friends Ticket</h4>
-    <p>Check back soon for availability of friends tickets for this year</p>    
-  </div>
+    <div style="text-align: center;">
+        <img id="ticketImg" src="images/vipticket_alt.png" />
+        <h4>Friends Ticket - £10</h4>
+        <p>Friends of the Festival tickets now available! You can get them from MJ Leeming Opticians on <a href='https://goo.gl/maps/zHcvuYkZDdM2'>School Lane</a> or by emailing <a href='mailto:DBFvolunteer@outlook.com?subject=Friends Ticket'>DBFvolunteer@outlook.com</a>.
+            <br><br>The friends tickets give you free admission to all sessions of the festival and priority entry with no queueing. Numbers are strictly limited so if you want free admission with no queueing then don’t delay.</p>
+    </div>
 </div>
