Add extra band info

--- a/app/views/music.html
+++ b/app/views/music.html
@@ -29,12 +29,17 @@
         <img width="100%" src="images/misfires.jpg">
     </div>
     <div class="bandDiv">
-        <h3 class="musicHeader">Banjo</h3>
+        <h3 class="musicHeader">Paddle Faster</h3>
         <span class="smallPrint">20:15 - 21:15</span>
+        <img width="100%" src="images/paddle.jpg">
+        <p>Jonny Hulme and Paul Higham have played together in various musical collaborations over the years, and with each materialising from distinctly different musical backgrounds, they combine to create an entertaining and potent blend of unique acoustic
+            styles. Expect traditional, modern, Americana, Celtic, popular etc. Powerful banjo and guitar, alongside strong vocals and harmonies.. goes down great with beer!</p>
     </div>
     <div class="bandDiv">
         <h3 class="musicHeader">Zero Days</h3>
         <span class="smallPrint">21:30 - 23:00</span>
+        <p>Zerodays is an electro jazz band combining spoken word, eclectic beats, jazz saxophone and soulful cosmic soundscapes.</p>
+        <img width="100%" src="images/zerodays.jpg">
     </div>
 
     <div style="text-align:center;">
