--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -49,6 +49,12 @@ a {
     padding-bottom: 30px;
 }
 
+.dropdown-menu>.active>a,
+.dropdown-menu>.active>a:focus,
+.dropdown-menu>.active>a:hover {
+    background-color: #d1232b;
+}
+
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
 
