fix spelling mistake

--- a/app/views/tickets.html
+++ b/app/views/tickets.html
@@ -14,6 +14,6 @@
         <img id="ticketImg" src="images/vipticket_alt.png" />
         <h4>Friends Ticket - £10</h4>
         <p>Friends of the Festival tickets now available! You can get them from MJ Leeming Opticians on <a href='https://goo.gl/maps/zHcvuYkZDdM2'>School Lane</a> or by emailing <a href='mailto:DBFvolunteer@outlook.com?subject=Friends Ticket'>DBFvolunteer@outlook.com</a>.
-            <br><br>The friends tickets give you free admission to all sessions of the festival and priority entry with no queueing. Numbers are strictly limited so if you want free admission with no queueing then don’t delay.</p>
+            <br><br>The friends tickets give you free admission to all sessions of the festival and priority entry with no queuing. Numbers are strictly limited so if you want free admission with no queuing then don’t delay.</p>
     </div>
 </div>
