--- a/app/views/main.html
+++ b/app/views/main.html
@@ -43,7 +43,9 @@
             <br> Manchester
             <br> M20 6HS
         </p>
+        <br>
     </div>
+    <p>Gin lover? <br>Check out <a href="ginposter.pdf">Didsbury Gin Festival 2017</a></p>
     <br>
     <h4>Contact us</h4>
     <p>
