--- a/app/views/main.html
+++ b/app/views/main.html
@@ -8,25 +8,7 @@
         <span>Thursday 26th 7-11PM</span><br>
         <span>Friday 27th 6-11PM</span><br>
         <span>Saturday 28th 12-11PM</span><br><br>
-        <div id="clockdiv">
-            <div>
-                <span class="days"></span>
-                <div class="smalltext">Days</div>
-            </div>
-            <div>
-                <span class="hours"></span>
-                <div class="smalltext">Hours</div>
-            </div>
-            <div>
-                <span class="minutes"></span>
-                <div class="smalltext">Minutes</div>
-            </div>
-            <div>
-                <span class="seconds"></span>
-                <div class="smalltext">Seconds</div>
-            </div>
-        </div>
-        <p style="font-style:italic; text-align:center; font-size:14px;">'til Didsbury's Premier Social Event</p>
+       <h3><a href="#/raffle">Raffle winners 2017</a></h3>
         <twitter-widget>
             <a class="twitter-timeline" data-lang="en" data-height="250" data-theme="light" href="https://twitter.com/dbf_beer"></a>
         </twitter-widget>
