Add coming soon message and dates for next year

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,21 +1,17 @@
-<div class="row marketing col-md-6 rowCountdown">
-    <div style="text-align: center">
-        <h3>The 10th annual Didsbury Beer Festival will take place on
+<div class="row marketing col-md-12 rowCountdown" style="text-align: center">
+    <div >
+        <h2>Coming Soon</h2>
+        <h3>The 11th annual Didsbury Beer Festival will take place on
             <br>
             <br>
-            <span style="font-weight:bold;">26th, 27th &amp; 28th October 2017</span>
+            <span style="font-weight:bold;">25th, 26th &amp; 27th October 2018</span>
         </h3>
-        <span>Thursday 26th 7-11PM</span><br>
-        <span>Friday 27th 6-11PM</span><br>
-        <span>Saturday 28th 12-11PM</span><br><br>
-       <h3><a href="#/raffle">Raffle winners 2017</a></h3>
+       <p>Check back soon for more info!</p>
         <twitter-widget>
             <a class="twitter-timeline" data-lang="en" data-height="250" data-theme="light" href="https://twitter.com/dbf_beer"></a>
         </twitter-widget>
     </div>
-</div>
-<div class="row marketing col-md-6" style="padding:10px; padding-left:20px; text-align: center;">
-    <div>
+<div>
         <br>
         <p>
             100+ Beers, Ciders &amp; Perries, with great food &amp; music
@@ -27,7 +23,6 @@
         </p>
         <br>
     </div>
-    <p>Gin lover? <br>Check out <a href="ginposter.pdf">Didsbury Gin Festival 2017</a></p>
     <br>
     <h4>Contact us</h4>
     <p>
