--- a/app/views/tickets.html
+++ b/app/views/tickets.html
@@ -1,16 +1,12 @@
 <div class="col-md-6 rowPadding">
-  <div style="text-align: center;">
-      <img id="ticketImg" src="images/Beer Glass 2018.svg" />
-      <h4>Friends Ticket - £10</h4>
-      <p>Friends of the Festival tickets now available! You can get them from MJ Leeming Opticians on <a href='https://goo.gl/maps/zHcvuYkZDdM2'>School Lane</a> or by emailing <a href='mailto:DBFvolunteer@outlook.com?subject=Friends Ticket'>DBFvolunteer@outlook.com</a>.
-          <br><br>The friends tickets give you free admission to all sessions of the festival and priority entry with no queuing. Numbers are strictly limited so if you want free admission with no queuing then don’t delay.</p>
-  </div>
-</div>
-<div class="col-md-6 rowPadding">
     <div style="text-align: center;">
-        <img id="beerImg" src="images/vipbeer_alt.png" />
+        <img id="beerImg" src="images/Beer Glass 2018.svg" />
         <h4>Normal Entry - £5 (Includes glass)</h4>
     </div>
+</div>
+
+<div class="col-md-6 rowPadding">
+
     <p>For normal entry into Didsbury Beer Festival, just turn up on the day and pay at the door.</p><br>
     <span>Thursday 26th</span><span class="pull-right">7-11PM</span><br>
     <span>Friday 27th</span><span class="pull-right">6-11PM</span><br>
