Fix theme colour for android

--- a/app/styles/_flipclock.scss
+++ b/app/styles/_flipclock.scss
@@ -10,7 +10,7 @@
 #clockdiv>div {
     padding: 6px;
     border-radius: 3px;
-    background: #d2232a;
+    background: #09875d;
     display: inline-block;
 }
 
