--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -118,16 +118,12 @@ a {
 .navbar-brand,
 .navbar-header {
     width: 100%;
-    margin-bottom: 10px;
-}
-
-.navbar-brand {
-    height: 175px;
 }
 
 .navbar-header {
-    height: 165px;
     margin-top: 5px;
+    max-height: 215px;
+    height: auto;
 }
 
 .container>.navbar-header {
@@ -142,9 +138,11 @@ a {
 }
 
 .image {
-    width: auto;
+    width: 75%;
+    height: auto;
+    max-height: 200px;
+    padding-top: 4%;
     margin: auto;
-    height: 100%;
 }
 
 .footerimage {
