--- a/app/views/volunteer.html
+++ b/app/views/volunteer.html
@@ -1,7 +1,25 @@
 <div class="row marketing col-md-12">
     <h2>We need you.......</h2>
+    <p>The Didsbury Beer Festival is managed and staffed entirely by volunteers and we are now looking for staff for this year. Volunteering at the festival is always great fun and many come back year after year, but we’re always looking for more.</p>
+    <p>So if you can spare anything from a couple of hours to a full weekend, we’d love to have you join us. The work can be hard but it is rewarding and obviously there are a few perks!</p>
     <p>
-        All the volunteer shifts during the festival are now full. If you can help on Sunday with clearing the site then we would greatly appreciate any time you can spare! Just ask at the front desk if you would like to help out.
+        <ul>
+            <li>
+                <p>You will be given refreshments, full training and support plus breaks whenever you need them.<br></p>
+            </li>
+            <li>
+                <p>If you are a student and working towards Employability Awards we can provide a certificate of volunteering.<br></p>
+            </li>
+            <li>
+                <p>Every volunteer gets a ‘limited edition’ festival t’shirt and glass to keep and an invite to our Festival Celebration party in January.</p>
+            </li>
+        </ul>
     </p>
-    <p>Cheers!</p>
+    <p>
+        If we reach the required numbers of staff needed on certain shifts these will be removed from the form and no longer available to book. So if you’ve selected the shifts you want and submitted the form ....YOU’RE IN!!</p>
+</div>
+<div class="row marketing col-md-12">
+    <p>Please fill in the form below to sign up to volunteer at this years festival.</p>
+    <p>For all other volunteering queries, don't hesitate to email us at <a href="mailto:volunteer@didsburybeerfestival.org.uk">volunteer@didsburybeerfestival.org.uk</a></p>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdSg2D_24r9gGKQmb4lyn0B2YPiTDmHO7Tj6XyuIFGoy807ig/viewform?embedded=true" width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 </div>
