Change from social club to community centre

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,23 +1,23 @@
 <div class="row marketing col-md-12 rowCountdown" style="text-align: center">
-    <div >
+    <div>
         <h2>Coming Soon</h2>
         <h3>The 11th annual Didsbury Beer Festival will take place on
             <br>
             <br>
             <span style="font-weight:bold;">25th, 26th &amp; 27th October 2018</span>
         </h3>
-       <p>Check back soon for more info!</p>
+        <p>Check back soon for more info!</p>
         <twitter-widget>
             <a class="twitter-timeline" data-lang="en" data-height="250" data-theme="light" href="https://twitter.com/dbf_beer"></a>
         </twitter-widget>
     </div>
-<div>
+    <div>
         <br>
         <p>
             100+ Beers, Ciders &amp; Perries, with great food &amp; music
         </p>
         <p style="text-align: center">
-            St Catherine's Social club<br> School Lane<br> Didsbury
+            St Catherine's Community Centre<br> School Lane<br> Didsbury
             <br> Manchester
             <br> M20 6HS
         </p>
